@@ -3,6 +3,7 @@
 - [add][minor] Add support for custom row/error converion functions.
 - [change][patch] Improve span for errors when a type does not implement `ToSql`.
 - [change][patch] Improve error messages when `client` is not defined.
+- [add][minor] Add support to specify the client to use as macro argument.
 
 # Version 0.1.4 - 2024-03-06
 - [fix][minor] Do not combine `#` with preceeding punctuation.
